# idris-codegen-ext

./: README.md  Setup.hs  idris-codegen-ext.cabal  stack.yaml
main/: Main.hs
rts/: Makefile
src/IRTS/: MyCodegenC.hs
